--- a/registration.html
+++ b/registration.html
@@ -32,7 +32,7 @@
 
   <div class="form-container">
     <h1>Crypts 4.0 Registration</h1>
-    <form action="https://formspree.io/f/mldnjbgn" method="POST" id="eventForm">
+    <form id="eventForm">
       <div class="form-field">
         <label for="email">Email</label>
         <input type="email" name="email" id="email" required>
